<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".AboutThisFifaActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="2.5"
        android:layout_height="0dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fifa_details"
            android:scaleType="fitXY"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:layout_weight="4">
        <ScrollView
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/in_numbers"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fifa_details"
                    android:textSize="16sp"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stadium"
                    android:textSize="19sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Matches1"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stadium2"
                    android:textSize="19sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Matches2"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stadium3"
                    android:textSize="19sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Matches3"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stadium4"
                    android:textSize="19sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Matches4"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stadium5"
                    android:textSize="19sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Matches5"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stadium6"
                    android:textSize="19sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Matches6"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stadium7"
                    android:textSize="19sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Matches7"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stadium8"
                    android:textSize="19sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Matches8"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stadium9"
                    android:textSize="19sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Matches9"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stadium10"
                    android:textSize="19sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Matches10"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stadium11"
                    android:textSize="19sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Matches11"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stadium12"
                    android:textSize="19sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Matches12"
                    android:textSize="14sp"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight=".5"
        android:gravity="center"
        android:layout_height="0dp">

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-9736622551342035/6655432838">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

</LinearLayout>